# net-ninjas

./: Cargo.toml  README.md
.github/workflows/: build-and-deploy.yml  build.yml
client/: Cargo.toml  index.html
client/src/: app_state.rs  assets.rs  main.rs  navigation.rs
client/src/ui/: debug.rs  main_menu.rs  mod.rs  splash.rs
client/src/ui/components/: button.rs
server/: Cargo.toml
