[package]
name = "client"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.0", features = ["dynamic_linking"] }
bevy_editor_pls = "0.4.0"
iyes_progress = { version = "0.8.0", features = ["assets"] }

[features]
editor = []