[package]
name = "client"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.0", features = [] }
bevy_asset_loader = { version = "0.16.0", features = ["progress_tracking"] }
bevy_editor_pls = "0.4.0"
bevy_screen_diagnostics = "0.2.3"
iyes_progress = { version = "0.8.0", features = ["assets"] }
maplit = "1.0.2"


[features]
default = ["dynamic"]
dynamic = ["bevy/dynamic_linking"]
editor = []
